Implement Delos-3928: Update Phase 1C performance documentation
- Create witness-service/docs/PHASE_1C_PERFORMANCE_BASELINES.md with comprehensive performance metrics
  - BLS cryptographic operations: signing (<5ms), verification (<3ms), aggregation (<10ms)
  - Dispatch overhead: <5µs (format detection only)
  - Full-path operations: <1100µs (end-to-end BLS)
  - Byzantine detection, key rotation, graceful degradation performance

- Add Phase 1C section to docs/PERFORMANCE_TUNING.md
  - Explains 40-50% consensus latency improvement over Phase 1B
  - Byzantine detection and key rotation tuning parameters
  - Memory profile under Byzantine conditions
  - Performance validation checklist

- Add witness-service/src/test/java/.../benchmark/README.md
  - Explains 4 benchmark categories and dispatch overhead puzzle
  - Running benchmarks and interpreting results
  - Performance validation procedures
  - Troubleshooting guide

- Add Phase 1C configuration section to docs/DEPLOYMENT_GUIDE.md
  - BLS key store setup and management
  - Byzantine detection configuration
  - Graceful degradation tuning
  - Environment variables and validation commands

All documentation cross-references validated and links verified.